--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,73 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      // 以下代码用于实现屏幕自适应
+      (function flexible (window, document) {
+        var docEl = document.documentElement
+        var dpr = window.devicePixelRatio || 1
+
+        // rem 手机12  ipad  14  pc 16
+
+        function getRemSize(docEl) {
+          var scale = (docEl.clientWidth / 375).toFixed(2);
+          if (scale > 3) {
+            scale = 16 / 12;
+            return scale * 12;
+          }
+
+          if(scale > 1.4) {
+            scale = 14 / 12;
+            return scale * 12;
+          }
+          
+          return scale * 12;
+        }
+
+        // adjust body font size
+        function setBodyFontSize () {
+          if (document.body) {
+            const remSize = getRemSize(docEl)
+            // document.body.style.fontSize = (12 * dpr) + 'px'
+            document.body.style.fontSize = remSize + 'px'
+          }
+          else {
+            document.addEventListener('DOMContentLoaded', setBodyFontSize)
+          }
+        }
+        setBodyFontSize();
+
+        // set 1rem = viewWidth / 10
+        function setRemUnit () {
+          // var rem = docEl.clientWidth / 10
+          const rem = getRemSize(docEl)
+          console.log('========================= ~ setRemUnit ~ rem', rem)
+          docEl.style.fontSize = rem + 'px'
+        }
+
+        setRemUnit()
+
+        // reset rem unit on page resize
+        window.addEventListener('resize', setRemUnit)
+        window.addEventListener('pageshow', function (e) {
+          if (e.persisted) {
+            setRemUnit()
+          }
+        })
+
+        // detect 0.5px supports
+        if (dpr >= 2) {
+          var fakeBody = document.createElement('body')
+          var testElement = document.createElement('div')
+          testElement.style.border = '.5px solid transparent'
+          fakeBody.appendChild(testElement)
+          docEl.appendChild(fakeBody)
+          if (testElement.offsetHeight === 1) {
+            docEl.classList.add('hairlines')
+          }
+          docEl.removeChild(fakeBody)
+        }
+      }(window, document))
+    </script>
   </body>
 </html>
